package-mode = false

[tool.poetry]
name = "desafio-1-bilhao-linhas-python"
version = "0.1.0"
description = ""
authors = ["Rafael Souza <rafasansou1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
polars = "0.20.3"
duckdb = "0.10.0"
modin = {extras = ["dask"], version = "^0.27.0"}
dask = {extras = ["complete"], version = "^2024.2.0"}
dask-expr = "^0.4.2"
tqdm = "^4.66.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
